--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,8 @@
-﻿<SfSidebar Width="250px" Animate="false" @bind-IsOpen="SidebarToggle">
+﻿<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
+</head>
+
+<SfSidebar Width="250px" Animate="false" @bind-IsOpen="SidebarToggle">
     <ChildContent>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -7,12 +11,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="settings">
-                <span class="oi oi-home" aria-hidden="true"></span> Settings
+                <span class="oi oi-cog" aria-hidden="true"></span> Settings
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <a class="nav-link" href="https://github.com/Cryosys/SearchCacher" target="_blank">
-                <span class="oi oi-home" aria-hidden="true"></span> Issues &amp; Feedback
+                <span class="oi bi-github" aria-hidden="true"></span> Issues &amp; Feedback
             </a>
         </div>
     </ChildContent>
