--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<head>
+﻿@using SearchCacher.Data
+
+<head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 
@@ -19,8 +21,38 @@
                 <span class="oi bi-github" aria-hidden="true"></span> Issues &amp; Feedback
             </a>
         </div>
+
+        <div style="position:absolute;bottom:0;margin:10px;vertical-align:center;color:white">
+            <a href="https://github.com/Cryosys/SearchCacher/releases/tag/@SearchService.Version" target="_blank"><u>Ver. @SearchService.Version</u></a>
+        </div>
     </ChildContent>
 </SfSidebar>
+
+<style>
+    a:link {
+        color: gray;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: gray;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: mediumpurple;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+
+    a:active {
+        color: plum;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+</style>
 
 @code {
     public bool SidebarToggle
@@ -33,5 +65,6 @@
                 _sidebarToggle = true;
         }
     }
+
     private bool _sidebarToggle = false;
 }
