[closes #21] Added option to search in a sub folder
Currently this feature is somewhat simple in the UI. We expect a direct path and do not have a browser or something like that to select the sub path

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -47,8 +47,8 @@
                         Enabling only extensions makes the search absolut. Meaning that only the specified extension will be searched for. <br />
                         Example: You want to search for all txt files. Input only .txt in the search box, all other settings do not matter.<br />
                         @* <s>
-                            The pattern is relative, meaning that '.txt' will only find a file for example that does not have a name and ends with '.txt'. Entering '*.txt' however will search for all files ending with '.txt'. <br />
-                            Entering 'nua*' will search for all files and folders containing the char set 'nua' at any point in the name. Like Manual -> Ma*nua*l.
+                        The pattern is relative, meaning that '.txt' will only find a file for example that does not have a name and ends with '.txt'. Entering '*.txt' however will search for all files ending with '.txt'. <br />
+                        Entering 'nua*' will search for all files and folders containing the char set 'nua' at any point in the name. Like Manual -> Ma*nua*l.
                         </s> *@
                         <br />
                         <br />
@@ -56,25 +56,25 @@
                         Tl:dr; writing only a word, for example 'test' will find all paths involing this word, regardless of upper or lower case and anywhere in the path. <br />
                         It does not matter if the word has something before or after it. Writing 'subfolder*.*test' will find all paths that have at some point subfolder in it and AFTER it somewhere test. <br />
                         The search will only search in paths if you enable the option, this will take a bit more time, but not that much more.
-                        <br/>
+                        <br />
                         Search paths * is equal to the base path of the search: @searchService.SearchPath
                     </ContentTemplate>
                 </AccordionItem>
             </AccordionItems>
         </SfAccordion>
     </div>
-    <br/>
-
-    @* <div style="display:flex;flex-direction:row;text-align:center;align-items:center">
-        <span style="margin-right:5px;margin-left:0px;min-width:100px">Search path:</span>
-        <SfTextBox Multiline="false" @bind-Value="data.searchPath" style="min-width:400px;width:auto" />
-    </div> *@
+    <br />
 
     <div style="display:flex;flex-direction:row;text-align:center;align-items:center">
-        <span style="margin-right:5px">Pattern:</span>
-        <SfTextBox Multiline="false" Placeholder="*nua*" @bind-Value="data.pattern" style="min-width:400px;width:auto" @onkeyup="@PatternTextBoxKeyUp" />
+    </div>
+
+    <div style="display:flex;flex-direction:row;text-align:center;align-items:center">
+        <span style="margin-right:5px;width:auto;white-space:nowrap">Search path:</span>
+        <SfTextBox Multiline="false" @bind-Value="data.searchPath" style="min-width:400px" @onkeyup="@PatternTextBoxKeyUp"/>
+        <span style="margin-left:5px;margin-right:5px">Pattern:</span>
+        <SfTextBox Multiline="false" Placeholder="*nua*" @bind-Value="data.pattern" style="min-width:400px" @onkeyup="@PatternTextBoxKeyUp"/>
         <SfButton style="margin:5px" @onclick=Search>Search</SfButton>
-        <div style="position: relative;width:50px">
+        <div style="position:relative;width:50px;margin:5px">
             <SfSpinner Size="20" @bind-Visible="@data.IsSpinnerVisible" />
         </div>
     </div>
@@ -121,7 +121,7 @@
 
         public string pattern { get; set; } = "nua*";
 
-        public Task<string?[]>? searchTask;
+        public Task<ISearcher.SearchResult>? searchTask;
 
         [Required]
         [Range(typeof(bool), "false", "true")]
@@ -196,17 +196,26 @@
         data.Paths = null;
 
         DateTime preSearch = DateTime.Now;
-        data.searchTask = searchService.GetSearchResult(new SearchSettings(data.pattern, data.searchOnlyFileExt, data.searchDirs, data.searchFiles, data.searchOnFullPath, data.caseSensitive));
+        data.searchTask = searchService.GetSearchResult(new SearchSettings(data.pattern, data.searchOnlyFileExt, data.searchDirs, data.searchFiles, data.searchOnFullPath, data.caseSensitive, data.searchPath));
         await data.searchTask;
         if (data.searchTask.Status != TaskStatus.RanToCompletion)
         {
+            await Task.Delay(100);
             ShowToast("Failed to complete search. Ex: " + data.searchTask.Exception?.ToString());
             return;
         }
 
         data.lastSearchTime = (DateTime.Now - preSearch).ToString(@"mm\:ss\:ffff", new System.Globalization.CultureInfo("en-US"));
 
-        data.Paths = data.searchTask.Result;
+        ISearcher.SearchResult result = data.searchTask.Result;
+        if (!result.Success)
+        {
+            await Task.Delay(100);
+            ShowToast(result.Error);
+            return;
+        }
+
+        data.Paths = result.Result;
         data.searchTask = null;
         data.IsSpinnerVisible = false;
         await Task.Delay(100);
