[#28] Update web settings page to allow for configuration of basic settings

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -6,7 +6,7 @@
 @using Syncfusion.Blazor.Navigations;
 @using Syncfusion.Blazor.Inputs;
 @using Syncfusion.Blazor.Notifications
-@inject SearchService searchService
+@inject ISearchService searchService
 @inject IJSRuntime JSRuntime
 
 <PageTitle>OnlySearch</PageTitle>
