--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -23,7 +23,7 @@
         </div>
 
         <div style="position:absolute;bottom:0;margin:10px;vertical-align:center;color:white">
-            <a href="https://github.com/Cryosys/SearchCacher/releases/tag/@SearchService.Version" target="_blank"><u>Ver. @SearchService.Version</u></a>
+            <a href="https://github.com/Cryosys/SearchCacher/releases/tag/@ISearchService.Version" target="_blank"><u>Ver. @ISearchService.Version</u></a>
         </div>
     </ChildContent>
 </SfSidebar>
